admin navbar arreglado y funciones mostrar amigos y solicitudes

--- a/wusick/app/views/partials/loginAdmin.html
+++ b/wusick/app/views/partials/loginAdmin.html
@@ -1,3 +1,5 @@
+  <div ng-include="'partials/navbar'"></div>
+
   <div id="loginpage">
         <div class="col-xs-12">
                 <div class="clearfix"></div>
