--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -7,7 +7,6 @@
     	</div>
 		
 		<!-- table pirata -->
- 	
 		 <table class="table table-striped table-hover">
           <thead>
           <tr>
@@ -74,9 +73,9 @@
           	<td>{{item.idUsuario}}</td>
             <td>{{item.nombre}}</td>
             <td>{{item.email}}</td>
-            <td>{{item.fecha_alta | date:"shortDate" }}</td>
+            <td>{{item.fecha_alta | date:"longDate" }}</td>
             <td ng-if="item.Tipo_usuarios_idTipo_usuarios == 1">
-	 			<a class="glyphicon glyphicon-user"></a> Básico
+	 			<a class="glyphicon glyphicon-user"></a> Bï¿½sico
 			</td>
 			<td ng-if="item.Tipo_usuarios_idTipo_usuarios == 2">
 	 			<a class="glyphicon glyphicon-music"></a> Artista
@@ -87,16 +86,17 @@
 			<td>
 				<div ng-if="item.bloqueado == 0">
 					<div class='btn-group btn-toggle'>
-						<button value={{item.idUsuario}} class='btn btn-sm btn-primary active glyphicon glyphicon-ok'></button>
-						<button data={{item.idUsuario}} name={{item.nombre}} ng-click='bloquear($event)' class='btn btn-sm btn-default glyphicon glyphicon-ban-circle' style="color:#ccc;"></button>
+						<button value={{item.idUsuario}} class='btn btn-sm btn-primary active glyphicon glyphicon-ok' id="{{item.idUsuario}}activ"></button>
+						<button data={{item.idUsuario}} name={{item.nombre}} ng-click='bloquear($event)' class='btn btn-sm btn-default glyphicon glyphicon-ban-circle'  id="{{item.idUsuario}}bloq" style="color:#ccc;"></button>
 					</div>
 				</div>
 				<div ng-if="item.bloqueado == 1">
 					<div class='btn-group btn-toggle'>
-						<button data={{item.idUsuario}} name={{item.nombre}} ng-click='desbloquear($event)' class='btn btn-sm btn-default glyphicon glyphicon-ok' style="color:#ccc;"></button>
-						<button class='btn btn-sm btn-danger glyphicon glyphicon-ban-circle active'></button>
+						<button data={{item.idUsuario}} name={{item.nombre}} ng-click='desbloquear($event)' class='btn btn-sm btn-default glyphicon glyphicon-ok'  id="{{item.idUsuario}}activ" style="color:#ccc;"></button>
+						<button class='btn btn-sm btn-danger glyphicon glyphicon-ban-circle active'  id="{{item.idUsuario}}bloq"></button>
 					</div>
 				</div>
+
 			</td>
 			<td style="text-align: center;">
 				<a style="font-size: 150%; float:none; cursor:pointer;" data-toggle="modal" data-target="#myModal" class="glyphicon glyphicon-list-alt" alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)'>
@@ -106,20 +106,24 @@
 				<a style="font-size: 150%; float:none; cursor:pointer; color:#ff6140;" class="glyphicon glyphicon-remove" data={{item.idUsuario}} name={{item.nombre}} ng-click='borrarUsuario($event)'>
 				</a>
 			</td>
-			<td style="text-align: center;">
-				<a style="font-size: 150%; float:none; cursor:pointer;" class="glyphicon glyphicon-envelope"></a>
+			<td  style="text-align: center;">
+				<a style="font-size: 150%; float:none; cursor:pointer;" class="glyphicon glyphicon-envelope"
+				data-toggle="modal" data-target=".bs-example-modal-lg" data={{item.idUsuario}} name={{item.idUsuario}} 
+				ng-click='listarPosts($event)' ></a>
 			</td>
+			</tr>
           </tbody>
         </table>
 		<!-- ./table pirata -->
     </div>
  </div>
- <!-- formulario de edición de datos de usuario -->
-<!-- Modal -->
+
+<!-- formulario de ediciï¿½n de datos de usuario -->
+<!-- Modal datos de usuario-->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header" style="background-color:#003366; color:white;">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel">Formulario de Edicion, Usuario: <strong>{{nombre}}</strong></h4>
       </div>
@@ -130,40 +134,40 @@
 		        <div class="col-xs-12 col">
 		        	<form id="registro" role="form" name="registro">
 		        	<!-- nombre -->
-		            	<div ng-class="{'has-error': registro.nombreU.$invalid, 'has-success': registro.nombreU.$valid}" class="form-group">
+		            	<div ng-class="{'has-error': registro.nombreU.$invalid, 'has-success': registro.nombreU.$valid}" class="form-group  has-success has-feedback">
 				            <label id="labname" for="nombreU" class="control-label">Nombre</label>
 				             <span ng-show="registro.nombreU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 				             <span ng-show="registro.nombreU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <input type="text" name="nombreU" class="form-control" placeholder="{{nombre}}" ng-value="{{userData.nombre}}" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
-				           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
+				           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanumï¿½ricos.</small></p>
 			            </div>
 			        <!--./nombre -->		            
 			            <div class="clearfix"></div>
 					<!-- email -->
-			            <div ng-class="{'has-error': registro.emailU.$invalid, 'has-success': registro.emailU.$valid}" class="form-group">	
+			            <div ng-class="{'has-error': registro.emailU.$invalid, 'has-success': registro.emailU.$valid}" class="form-group  has-success has-feedback">	
 				            <label id="labmail" for="emailU" class="control-label">Email</label> 
 				            <span ng-show="registro.emailU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 				            <span ng-show="registro.emailU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <input type="email" name="emailU" class="form-control" placeholder={{email}} ng-value="{{userData.email}}" ng-model="userData.email" required/>
-				            <small class="text-danger" ng-show="registro.emailU.$invalid">Email inválido.</small>
+				            <small class="text-danger" ng-show="registro.emailU.$invalid">Email invï¿½lido.</small>
 			            </div>
 			        <!-- ./email -->
 			            <div class="clearfix"></div>
-					<!-- contraseña -->
-			            <div ng-class="{'has-error': registro.passU.$invalid, 'has-success': registro.passU.$valid}" class="form-group">
-				            <label id="labpass" for="passU" class="control-label">Contraseña</label>
+					<!-- contraseï¿½a -->
+			            <div ng-class="{'has-error': registro.passU.$invalid, 'has-success': registro.passU.$valid}" class="form-group  has-success has-feedback">
+				            <label id="labpass" for="passU" class="control-label">Contraseï¿½a</label>
 				            <span ng-show="registro.passU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 				             <span ng-show="registro.passU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <input type="text" name="passU" id="passU" class="form-control" placeholder={{password}} ng-value="{{password}}" ng-model="userData.password" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
-				            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small>
+				            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 20 caracteres alfanumï¿½ricos.</small>
 			            </div>
-			        <!-- ./contraseña -->
+			        <!-- ./contraseï¿½a -->
 			            <div class="clearfix"></div>
 			            
 		            <!--USUARIO BASICO-->
 				    	<div ng-if="tipo == 1">
 				    	
-								<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group"">
+								<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group  has-success has-feedback">
 						            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
 						            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 					                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
@@ -171,54 +175,54 @@
 						            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
 					            </div>
 						            
-					            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group">
+					            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group  has-success has-feedback">
 						            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
 						            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 					                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 						            	<select id="sexoU"  name="sexoU" ng-model="userData.sexo" class="form-control">
 						            		<option ng-repeat="s in sexos"ng-value="{{userData.sexo}}" ng-selected="'{{s.sexo}}' === '{{userData.sexo}}'" >{{s.nombre}}</option>	            		
 						            	</select>
-						            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
+						            <small class="text-danger" ng-show="registro.sexoU.$invalid">ï¿½Eres hombre o mujer?</small>
 					            </div>
 						</div>
 					<!-- ./USUARIO BASICO-->
 		
 			   		<!--USUARIO ARTISTA-->			
 						<div ng-if="tipo == 2">
-								<div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group">
-						            <label id="labgenero" for="generoU" class="control-label">Género Musical</label>
+								<div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group  has-success has-feedback">
+						            <label id="labgenero" for="generoU" class="control-label">Gï¿½nero Musical</label>
 						            <span ng-show="registro.generoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 					            	<span ng-show="registro.generoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 						            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control">
 						            		<option ng-repeat="gen in userData.generos" ng-value="{{gen.idGeneros}}" ng-selected="{{gen.idGeneros}} == {{userData.genero}}" >{{gen.nombre}}</option>
 						            	</select>
-						            <small class="text-danger" ng-show="registro.generoU.$invalid">¿Qué tipo de música toca tu grupo?</small>
+						            <small class="text-danger" ng-show="registro.generoU.$invalid">ï¿½Quï¿½ tipo de mï¿½sica toca tu grupo?</small>
 					            </div>
 						</div>
 					<!-- ./USUARIO ARTISTA-->
 						
 					<!--USUARIO SALA-->
 						<div ng-if="tipo == 3">
-								<div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group">
+								<div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group  has-success has-feedback">
 						            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
 						            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 					             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 						            <input type="text" id="aforoU" ng-value="userData.aforo" ng-model="userData.aforo" placeholder={{aforo}} name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
 						            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
 					            </div>
-					            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group">
-						            <label id="labafo" for="poblacionU" class="control-label">Población</label>
+					            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group  has-success has-feedback">
+						            <label id="labafo" for="poblacionU" class="control-label">Poblaciï¿½n</label>
 						            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 					            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 						            <input type="text" id="poblacionU" ng-value="userData.poblacion" ng-model="userData.poblacion" placeholder={{poblacion}}  name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
-						            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
+						            <small class="text-danger" ng-show="registro.poblacionU.$invalid">ï¿½Dï¿½nde estï¿½ la sala?.</small>
 					            </div>
-					            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group">
-						            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
+					            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group  has-success has-feedback">
+						            <label id="labafo" for="direccionU" class="control-label">Direcciï¿½n</label>
 						            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 					                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 						            <input type="text" id="direccionU" ng-value="userData.direccion" ng-model="userData.direccion" placeholder={{direccion}} name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
-						            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
+						            <small class="text-danger" ng-show="registro.direccionU.$invalid">ï¿½En que direcciï¿½n exacta?.</small>
 					            </div>
 						</div>
 					<!-- ./USUARIO SALA-->
@@ -234,7 +238,7 @@
 				    </form>
 		        </div>
 		    </div>
-			<!-- ./formulario -->
+	  <!-- ./formulario -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
@@ -242,3 +246,76 @@
     </div>
   </div>
 </div>
+<!-- ./Modal datos de usuario-->
+
+<!-- Modal listado de posts -->
+<div class="modal fade bs-example-modal-lg" id="modalPost"tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color:#003366; color:white;" >
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3 class="modal-title">Usuario: {{postsDelUsuario[0].nombre}}</h3>
+      </div>
+      <!-- tabla con posts -->
+		 <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+           <th>
+              <a href="" ng-click="ordenarPor('idPosts')">
+                nÂº post
+              </a>
+              <span class="caret" style="cursor: pointer" ng-click="ordenarPor('-idPosts')"></span>
+           </th>
+           <th>
+              <a href="" ng-click="ordenarPor('fecha')">
+                Fecha
+              </a>
+              <span class="caret" style="cursor: pointer" ng-click="ordenarPor('-fecha')"></span>
+            </th>
+            <th>
+              <a href="" ng-click="ordenarPor('post_img')">
+                Imagen
+              </a>
+              <span class="caret" style="cursor: pointer" ng-click="ordenarPor('-post_img')"></span>
+            </th>
+            <th style="width:45%;">
+              <a href="" ng-click="ordenarPor('contenido')">
+                Contenido
+              </a>
+              <span class="caret" style="cursor: pointer" ng-click="ordenarPor('-contenido')"></span>
+            </th>
+            <th>
+              <a href="" ng-click="ordenarPor('destinatario')">
+                Destinatario
+              </a>
+              <span class="caret" style="cursor: pointer" ng-click="ordenarPor('-destinatario')"></span>
+            </th>
+             <th>
+              <a href="">
+               Eliminar
+              </a>
+            </th>
+          </tr>
+          </thead>
+          
+          <tbody>
+          <tr ng-repeat="post in postsDelUsuario | orderBy:ordenSel | filter:buscar"  id="{{post.idPosts}}">
+          	<td>{{post.idPosts}}</td>
+            <td>{{post.fecha | date:"shortDate"}}</td>
+            <td><img alt="  imagen" src="{{post.post_img}}" width="70"></td>
+            <td>{{post.contenido}}</td>
+            <td>{{post.destinatario}}</td>
+			<td style="text-align: center;">
+				<a style="font-size: 150%; float:none; cursor:pointer; color:#ff6140;" class="glyphicon glyphicon-remove" data={{post.idPosts}} name={{post.Usuarios_idUsuario}} ng-click='eliminarPost($event)'></a>
+			</td>
+			</tr>
+          </tbody>
+        </table>
+      <!-- ./tabla con posts -->
+    </div>
+  </div>
+</div>
+<!-- ./Modal listado de posts-->
+
+<!-- paginador de la tabla -->
+
