--- a/wusick/app/views/partials/perfil.html
+++ b/wusick/app/views/partials/perfil.html
@@ -64,7 +64,11 @@
 
 
         </section>
-        <div id="daside"></div>
+        <div id="daside">
+            <div id="solicitudes">
+                <a href="/solicitudes"><button class="btn btn-info">Solicitudes<span class="badge">10</span></button></a>
+            </div>
+        </div>
         <div class="clearfix"></div>
 
            
