--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -56,7 +56,11 @@
 
 
         </section>
-        <div id="daside"></div>
+        <div id="daside">
+                <div id="solicitudes">
+                <a href="/solicitudes"><button class="btn btn-info">Solicitudes<span class="badge">10</span></button></a>
+            </div>
+        </div>
         <div class="clearfix"></div>
 
            
