--- a/wusick/app/views/partials/navbarMain.html
+++ b/wusick/app/views/partials/navbarMain.html
@@ -1,4 +1,4 @@
-<div class="header navbar-collapse" ng-controller="NavbarMainCtrl">
+<div class="header navbar-collapse">
   <ul class="nav nav-tabs pull-right" id="navi">
     <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
         <a ng-href="{{item.link}}">{{item.title}}</a>
