--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -12,21 +12,27 @@
             <a href="">Amigos</a>
                 <ul id="listaAmigos">
                     <a href="/amigos" class="buscara">Buscar Amigos</a>
-                    <li ng-repeat="amigoSide in amigosSide" ng-show="amigoSide.Tipo_usuarios_idTipo_usuarios==1">{{amigoSide.nombre}}</li>
+                    <li ng-repeat="amigoSide in amigosSide" ng-show="amigoSide.Tipo_usuarios_idTipo_usuarios==1">
+                        <a ng-href="/perfil/{{amigoSide.idUsuario}}">{{amigoSide.nombre}}</a>
+                    </li>
                 </ul>
         </li>
         <li>
             <a href="">Artistas</a>
                 <ul id="listaArtistas">
                     <a href="/artistas" class="buscara">Buscar Artistas</a>
-                    <li ng-repeat="artista in artistasSide" ng-show="artista.Tipo_usuarios_idTipo_usuarios==2" >{{artista.nombre}}</li>
+                    <li ng-repeat="artista in artistasSide" ng-show="artista.Tipo_usuarios_idTipo_usuarios==2" >
+                        <a ng-href="/perfil/{{artista.idUsuario}}">{{artista.nombre}}</a>
+                    </li>
                 </ul>
         </li>
         <li >
             <a href="">Salas</a>
             <ul id="listaArtistas">
                 <a href="/salas" class="buscara">Buscar Salas</a>
-                    <li ng-repeat="sala in salasSide" ng-show="sala.Tipo_usuarios_idTipo_usuarios==3" >{{sala.nombre}}</li>
+                    <li ng-repeat="sala in salasSide" ng-show="sala.Tipo_usuarios_idTipo_usuarios==3" >
+                        <a ng-href="/perfil/{{sala.idUsuario}}">{{sala.nombre}}</a>
+                    </li>
                 </ul>
         </li>
          <li class="last">
