--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -33,15 +33,15 @@
                             <div class="post">
                                 <div class="posthead">
                                     <img ng-src="{{usuario.profile_img}}" class="img-responsive" heigth="50" width="50"/>
-                                    <a href=""><strong class="text-info">{{post.nombre}}</strong></a>
-                                     <a href="" ng-show="post.destinatario!=null">
+                                    <a ng-href="/perfil/{{post.idautor}}"><strong class="text-info">{{post.nombre}}</strong></a>
+                                     <a ng-show="post.destinatario!=null">
                                         <strong class="text-info">  -->  {{post.destinatario}}</strong>
                                     </a>
                                     <small class="text-right">{{post.fecha | date:'medium'}}</small>
                                 </div>
                                 <p>{{post.contenido}}</p>
                                 <p ng-show="post.img!='null'">
-                                 <a href="{{post.img}}" alt="imagen">   
+                                 <a ng-href="{{post.img}}" alt="imagen">   
                                      <img class="img-responsive" data-ng-src="{{post.img}}" Post">
                                 </a>
                                 </p>
