--- a/wusick/app/views/partials/perfil.html
+++ b/wusick/app/views/partials/perfil.html
@@ -41,7 +41,7 @@
                             <div class="post">
                                 <div class="posthead">
                                     <img ng-src="{{usuario.profile_img}}" class="img-responsive" heigth="50" width="50"/>
-                                    <a ng-href=""><strong class="text-info">{{usuarioPerfil.nombre}}</strong></a>
+                                    <a ng-href=""><strong class="text-info">{{post.nombre}}</strong></a>
                                      <a href="" ng-show="post.destinatario!=null">
                                         <strong class="text-info">  -->  {{post.destinatario}}</strong>
                                     </a>
