--- a/wusick/app/views/partials/perfil.html
+++ b/wusick/app/views/partials/perfil.html
@@ -37,17 +37,16 @@
                 <div id="listapost">
                     <ul class="list-unstyled">
     
-                        <li ng-repeat="post in posts">
-                            <div class="post">
+                        <li ng-repeat="post in posts" >
+                            <div class="post"  id="{{post.idPosts}}">
                                 <div class="posthead">
                                     <img ng-src="{{usuario.profile_img}}" class="img-responsive" heigth="50" width="50"/>
                                     <a ng-href=""><strong class="text-info">{{post.nombre}}</strong></a>
-                                     <a href="" ng-show="post.destinatario!=null">
+                                    <a href="" ng-show="post.destinatario!=null">
                                         <strong class="text-info">  -->  {{post.destinatario}}</strong>
                                     </a>
                                     <span ng-click="eliminarPost(post.idPosts)" class="text-danger text-right eliminar">X</span>
                                     <small class="text-right">{{post.fecha | date:'medium'}}</small>
-
                                 </div>
                                 <p>{{post.contenido}}</p>
                                 <p ng-show="post.img!='null'">
@@ -58,8 +57,6 @@
                             </div>
                         </li>
                     </ul>
-                
-    
                 </div>
                 
 			</div>
