--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -1,7 +1,8 @@
 <aside class="visible-desktop col-xs-12 col-sm-12 col-md-3 row">
     <!-- search -->
     <div id="profile">
-        <img id="profile-img" src="http://www.codeproject.com/KB/GDI-plus/ImageProcessing2/img.jpg" width="60" height="60">
+        <img id="profile-img" src="{{usuario.profile_img}}" width="60" height="60">
+        
         <h4 id="profile-name" class="text-info"><small>{{usuario.nombre}}</small></h4></br>
         <a href="" id="profile-edit" class="text-info "><small>Editar Perfil</small></a>
     </div>
