--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -58,7 +58,7 @@
         </section>
         <div id="daside">
                 <div id="solicitudes">
-                <a href="/solicitudes"><button class="btn btn-info">Solicitudes<span class="badge">10</span></button></a>
+                <a href="/solicitudes"><button class="btn btn-info">Solicitudes<span class="badge"></span></button></a>
             </div>
         </div>
         <div class="clearfix"></div>
