--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -198,7 +198,7 @@ h4#welcome{
     padding: 15px;
 }
 .posthead strong{
-    font-size: 1.14em;
+    font-size: 1.1em;
 }
 .posthead small{
     float:right;
@@ -218,6 +218,11 @@ h4#welcome{
     float: right;
     line-height: 5px;
     cursor: pointer;
+}
+
+.posthead img{
+    display: inline-block;
+    margin-right: 10px;
 }
 /* =================================
                 comment
