correccion del post

--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -43,7 +43,7 @@
                                 <p>{{post.contenido}}</p>
                                 <p ng-show="post.img!='null'">
                                  <a ng-href="{{post.img}}" alt="imagen">   
-                                     <img class="img-responsive" ng-src="{{post.img}}">
+                                     <img class="img-responsive" ng-src="{{post.img}}" />
                                 </a>
                                 </p>
                             </div>
