--- a/wusick/app/views/partials/perfil.html
+++ b/wusick/app/views/partials/perfil.html
@@ -51,7 +51,7 @@
                                 <p>{{post.contenido}}</p>
                                 <p ng-show="post.img!='null'">
                                  <a href="{{post.img}}" alt="imagen">   
-                                     <img class="img-responsive" data-ng-src="{{post.post_img}}" Post">
+                                     <img class="img-responsive" data-ng-src="{{post.post_img}}" />
                                 </a>
                                 </p>
                             </div>
