--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -4,7 +4,7 @@
         <img id="profile-img" src="{{usuario.profile_img}}" width="60" height="60">
         
         <h4 id="profile-name" class="text-info"><small>{{usuario.nombre}}</small></h4></br>
-        <a href="" id="profile-edit" class="text-info "><small>Editar Perfil</small></a>
+        <a href="/cuenta" id="profile-edit" class="text-info "><small>Editar Perfil</small></a>
     </div>
 
     <!-- menu -->
