--- a/wusick/app/views/partials/solicitudes.html
+++ b/wusick/app/views/partials/solicitudes.html
@@ -11,7 +11,7 @@
           <tbody>
           <tr ng-repeat="solicitud in solicitudesD">
           <div ng-if='solicitudesD==""'><br/>
-			<p class="h3">Actualmente no tiene ninguna solicitud de amistad</p>
+			<p class="h3 text-info" style="font-weight:100">Actualmente no tiene ninguna solicitud de amistad</p>
 			</div>
           
             <td style="text-align: center;">{{solicitud.nombre}}</td>
