--- a/wusick/app/views/index.html
+++ b/wusick/app/views/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
-    <title></title>
+    <title>Wusick · La red social de Música</title>
      <link rel="shortcut icon" href="favicon.ico" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
