--- a/wusick/app/views/partials/salas.html
+++ b/wusick/app/views/partials/salas.html
@@ -50,7 +50,9 @@
       </div>
     </div>
      <h1 class="titulo" class="text-info">Salas a las que sigues: </h1>
-    
+     <div ng-if="amigos==''"> 
+                <p class="h3 text-info" style="font-weight:100;"><spam style="text-transform: capitalize;">{{usuario.nombre}}</spam>,actualmente no sigues a ninguna sala.</p>
+              </div>
     <div id="amigosListaAmigos">
         <ul class="list-unstyled">
             <li ng-repeat="amigo in amigos" ng-show="amigo.Tipo_usuarios_idTipo_usuarios==3">
