--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -211,7 +211,7 @@ h4#welcome{
 }
 
 .post p{
-    padding: 15px;
+    padding: 15px 0 15px 60px;
 }
 
 .posthead span.eliminar{
@@ -408,7 +408,7 @@ h4#welcome{
 }
 
 .sideMenu > li > ul > li > a {
-    display: block;
+    display: inline;
     padding:0;
     font-size: 12px;
     line-height: 1.5em;
