--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -34,8 +34,9 @@
                                 <div class="posthead">
                                     <img ng-src="{{usuario.profile_img}}" class="img-responsive" heigth="30" width="30"/>
                                     <a ng-href="/perfil/{{post.idautor}}"><strong class="text-info">{{post.nombre}}</strong></a>
+
+                                     <img src="../images/link.png" width="20" style="display:inline-block; margin-right:0;" ng-show="post.destinatario!=null"/>
                                      <a ng-show="post.destinatario!=null">
-                                        <img src="">
                                         <strong class="text-info">{{post.destinatario}}</strong>
                                     </a>
                                     <small class="text-right">{{post.fecha | date:'medium'}}</small>
