--- a/wusick/app/views/partials/salas.html
+++ b/wusick/app/views/partials/salas.html
@@ -51,7 +51,9 @@
     </div>
      <h1 class="titulo" class="text-info">Salas a las que sigues: </h1>
      <div ng-if="amigos==''"> 
-                <p class="h3 text-info" style="font-weight:100;"><spam style="text-transform: capitalize;">{{usuario.nombre}}</spam>,actualmente no sigues a ninguna sala.</p>
+                <p class="h3 text-info" style="font-weight:100;">
+                  <img class="img-responsive" ng-src="../images/comment.png" width="60" style="display:inline-block"/>
+                  <spam style="text-transform: capitalize;">{{usuario.nombre}}</spam>,actualmente no sigues a ninguna sala.</p>
               </div>
     <div id="amigosListaAmigos">
         <ul class="list-unstyled">
